# lang

./: .gitignore  Cargo.toml  README.md  build.rs  const_builder.py
.github/workflows/: test.yaml
benches/: main.rs
fckl equivalents/: de.fckl  en.fckl  fr.fckl  ko.fckl
lang-inner/: Cargo.toml
lang-inner/src/: de.rs  filtered.rs  lib.rs  prelude.rs  tok.rs  verify.rs
lang-inner/src/compress/: macro_impls.rs  mod.rs  prelude.rs  ser.rs  unique_stream.rs
lang-inner/src/prelude/: err_warn.rs  keywords.rs  mod.rs
lang-inner/src/tables/: digits.rs  mod.rs  prelude.rs
lang-inner/src/tables/table_init/: map1.in  map2.in  map3.in
lang-macros/: Cargo.toml
lang-macros/src/: lib.rs  se.rs  se_old.rs
lang-macros/src/se/: err_warn.rs  keywords.rs  mod.rs
languages/: de.fckl  en.fckl  ens.fckl
src/: de.rs  en.rs  fr.rs  keywords.rs  ko.rs  lexer.rs  lib.rs  lib_expanded.rs  main.rs  tok.rs
src/languages/: de.rs  en.rs  mod.rs
src/prelude/: generics.rs  lang.rs  mod.rs  tok.rs
table-page/: Cargo.toml  index.html  index.js  useful.js
table-page/src/: lib.rs
tests/: codes.rs  samples.rs  specifics.rs  symbols.rs  ustream.rs
tests/sample scripts/: test1.fck  test2.fck  test3.fck
