[package]
name = "lang"
description = "Language files for fck"
version = "0.1.0"
authors = ["RosiePuddles <rosiegbartlett@gmail.om>"]
edition = "2018"
homepage = "https://github.com/RosiePuddles/fck/tree/main/lang"
readme = "README.md"
license = "GPL-3.0"
include = ["/fckl equivalents"]

[badges]
maintenance = {status = "as-is"}

[dependencies]
