[package]
name = "lang"
description = "Language parsing for fck"
version = "0.1.0"
authors = ["RosiePuddles <rosiegbartlett@gmail.com>"]
edition = "2021"
homepage = "https://github.com/RosiePuddles/fck/tree/main/lang"
readme = "README.md"
license = "GPL-3.0"

[badges]
maintenance = {status = "as-is"}

[dependencies]
lang-macros = { path = "lang-macros" }
lang-inner = { path = "lang-inner" }
dirs = "5.0.0"
num-bigint = "0.4.3"
cflp = "1.0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "main"
harness = false
