[package]
name = "lang-inner"
version = "0.1.0"
edition = "2021"

[dependencies]
paste = "1.0"
itertools = "0.10.5"
quote = { version = "1.0", optional = true }
syn = { version = "2.0", optional = true }
proc-macro2 = { version = "1.0", optional = true }

[dev-dependencies]
rand = "0.8.5"

[features]
macro = ["quote", "syn", "proc-macro2"]
